--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/"
+    "lint": "eslint src/**/*.js --fix"
   },
   "husky": {
     "hooks": {
