--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "husky": "^7.0.2",
     "lint-staged": "11.2.3",
     "react": "^17.0.2",
+    "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-flexbox-grid": "^2.1.2",
     "react-html-parser": "^2.0.2",
